From Roland Knall: Avoiding the fuzz-test crash, but still allowing for large parts of CIP to be dissected.

ref https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6519

svn path=/trunk/; revision=39718