epan/dissectors/packet-cip.c
@@ -3512,6 +3512,10 @@ dissect_cip_multiple_service_packet_rsp(tvbuff_t *tvb, packet_info *pinfo, proto
    cip_req_info_t *cip_req_info, *mr_single_req_info;
    mr_mult_req_info_t *mr_mult_req_info = NULL;
 
+   /* XXX DISABLE CIP MULTIPLE SERVICE PACKET RSP --until the fuzz failures stop */
+   expert_add_info_format(pinfo, item, PI_MALFORMED, PI_ERROR, "Multiple Service Packet service disabled - see Bug #6519 for details");
+   return;
+
    if (tvb_reported_length_remaining(tvb, offset) < 2)
    {
       expert_add_info_format(pinfo, item, PI_MALFORMED, PI_ERROR, "Multiple Service Packet service missing Number of Services field");
@@ -4940,9 +4944,6 @@ dissect_cip(tvbuff_t *tvb, packet_info *pinfo, proto_tree *tree)
 {
    enip_request_info_t *enip_info;
    cip_req_info_t *preq_info;
-
-/* XXX DISABLE CIP DISSECTOR--until the fuzz failures stop */
-return 0;
 
    /* Make entries in Protocol column and Info column on summary display */
    col_set_str(pinfo->cinfo, COL_PROTOCOL, "CIP");
